<resources>
    <string name="app_name">Tinkoff Project</string>
    <string name="control_res">Тут вы сможете контролировать свои доходы и расходы</string>
    <string name="sign_in_google">Войти с помощью Google</string>
    <string name="welcome">Добро пожаловать \nв КошелОК</string>
    <string name="operation_add">Добавить операцию</string>
    <string name="has_no_notes">У вас пока нет записей</string>
    <string name="expenses">Расход</string>
    <string name="income">Доход</string>
    <string name="added">Добавлено</string>
    <string name="cant_sign_in">Не получилось войти</string>
    <string name="touch_again_for_exit">Нажмите ещё раз для выхода</string>

    <string name="gift">Подарок</string>
    <string name="part_time_job">Подработка</string>
    <string name="percents">Капитализация</string>
    <string name="salary">Зарплата</string>

    <string name="sum">Сумма</string>
    <string name="type">Тип</string>
    <string name="main">Основные</string>
    <string name="category">Категория</string>
    <string name="settings_additional">Дополнительные настройки</string>
    <string name="date">Дата операции</string>

    <string name="date_format_default">dd MMM</string>
    <string name="date_format_calendar">MMM yyyy</string>
    <string name="date_format_month_full">dd MMMM</string>
    <string name="operation_new">Новая операция</string>
    <string name="enter_value">Введите значение</string>
    <string name="enter_count">Введите сумму</string>
    <string name="operation_choose_type">Выберите тип операции</string>
    <string name="choose_category">Выберите категорию</string>
    <string name="done">Готово</string>
    <string name="operation_sum">Сумма операции</string>
    <string name="didnt_chosen">Не выбрано</string>
    <string name="wrong_input">Некорректное значение</string>
    <string name="tools_groceries">Супермаркет</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="date_format_only_time">hh:mm</string>

    <string name="selected">Выбрано</string>
    <string name="category_name">Названия категории</string>
    <string name="imaging_name">Придумайте название</string>

    <string name="balance_overall">Общий баланс</string>

    <string name="wallet_new">Новый кошелёк</string>
    <string name="name">Название</string>
    <string name="currency">Валюта</string>
    <string name="limit">Лимит</string>
    <string name="choose_name">Придумайте название</string>
    <string name="save">Сохранить</string>
    <string name="limit_desc">Лимит на траты</string>
    <string name="wallet_name">Название кошелька</string>

    <string name="dont_set">Не установлено</string>
    <string name="icon">Иконка</string>
    <string name="category_new">Новая категория</string>
    <string name="choose_color">Задать цвет</string>
    <string name="category_create">Создать категорию</string>
    <string name="category_update">Обновить категорию</string>
    <string name="next">Далее</string>
    <string name="wallet_create">Создать кошелёк</string>
    <string name="wallet_update">Обновить кошелёк</string>
    <string name="turn">Свернуть</string>
    <string name="show_more">Показать больше</string>
    <string name="hide">Свернуть</string>
    <string name="show_hidden_wallets">Скрытые кошельки</string>

    <string name="error_smth_went_wrong">Что-то пошло не так</string>
    <string name="error_internet_off">Нет соединения с интернетом</string>
    <string name="limit_is_over">Вы превысили лимит на траты</string>
    <string name="confirm_remove_transaction">Уверены что хотите удалить запись?</string>
    <string name="confirm_remove_wallet">Уверены что хотите удалить кошелёк?</string>
    <string name="cancel">Отменить</string>
    <string name="remove">Удалить</string>
    <string name="empty" />
</resources>