<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/view_dimen_big"
    android:paddingTop="@dimen/view_dimen_not_so_big"
    android:paddingBottom="@dimen/view_dimen_extra_normal">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/view_dimen_big"
        android:textAppearance="@style/AlertDialogTitle"
        tools:text="@string/confirm_remove_transaction" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/view_dimen_normal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/view_dimen_big"
            android:text="@string/cancel"
            android:textAppearance="@style/AlertDialogButton"
            android:textColor="@color/light_blue" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:textAppearance="@style/AlertDialogButton"
            android:textColor="@color/red_main" />
    </LinearLayout>
</LinearLayout>