<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/section_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <TextView
            android:id="@+id/tv_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_dimen_normal"
            android:text="@string/income"
            android:textAppearance="@style/Element" />

        <TextView
            android:id="@+id/tv_consumption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_dimen_normal"
            android:text="@string/expenses"
            android:textAppearance="@style/Element" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn"
        style="@style/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_dimen_normal"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/section_type"
        app:layout_constraintStart_toStartOf="@id/section_type"
        app:layout_constraintTop_toBottomOf="@id/section_type" />
</androidx.constraintlayout.widget.ConstraintLayout>