<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/section_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_dimen_normal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/view_dimen_extra_small"
                android:scaleType="fitCenter"
                android:src="@drawable/onboarding_image" />

            <TextView
                android:id="@+id/tw_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_dimen_big"
                android:gravity="top"
                android:text="@string/welcome"
                android:textAppearance="@style/TextAppearance.Head"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_dimen_small"
                android:gravity="top"
                android:text="@string/control_res"
                android:textAppearance="@style/TextAppearance.Description" />
        </LinearLayout>

        <com.example.tinkoffproject.ui.main.NextCustomButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_dimen_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section_welcome"
            app:layout_constraintVertical_bias="1"
            app:text="@string/sign_in_google" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
