<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/section_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_dimen_normal"
                android:text="@string/main"
                android:textAppearance="@style/Element"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_dimen_normal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/amount"
                    android:textAppearance="@style/Element"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/view_dimen_not_so_small"
                    android:textAppearance="@style/EmptyView"
                    android:textSize="@dimen/text_size_normal"
                    tools:text="130 000 ₽" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_next" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_dimen_normal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/type"
                    android:textAppearance="@style/Element"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/view_dimen_not_so_normal"
                    android:textAppearance="@style/EmptyView"
                    android:textSize="@dimen/text_size_normal"
                    tools:text="Доход" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_next" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_dimen_normal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/category"
                    android:textAppearance="@style/Element"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/view_dimen_not_so_normal"
                    android:textAppearance="@style/EmptyView"
                    android:textSize="@dimen/text_size_normal"
                    tools:text="Зарплата" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_next" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_dimen_normal"
                android:text="@string/settings_additional"
                android:textAppearance="@style/Element"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_dimen_normal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/date"
                    android:textAppearance="@style/Element"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/view_dimen_not_so_normal"
                    android:textAppearance="@style/EmptyView"
                    android:textSize="@dimen/text_size_normal"
                    tools:text="21 июля" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/btn"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_dimen_normal"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/section_type"
            app:layout_constraintStart_toStartOf="@id/section_type"
            app:layout_constraintTop_toBottomOf="@id/section_type" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>